--- a/packages/unicon-cli/package.json
+++ b/packages/unicon-cli/package.json
@@ -9,5 +9,13 @@
     "dotenv": "^6.0.0",
     "meow": "^5.0.0",
     "unicon": "^0.2.1"
+  },
+  "devDependencies": {
+    "prettier": "1.14.2"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
