--- a/packages/unicon-transformer-json/package.json
+++ b/packages/unicon-transformer-json/package.json
@@ -6,5 +6,13 @@
   "dependencies": {
     "svgo": "^1.0.5",
     "svgson-next": "^4.1.5"
+  },
+  "devDependencies": {
+    "prettier": "1.14.2"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
