--- a/packages/unicon/package.json
+++ b/packages/unicon/package.json
@@ -11,5 +11,13 @@
     "exec-then": "^1.3.1",
     "figma-js": "^1.5.1",
     "make-dir": "^1.3.0"
+  },
+  "devDependencies": {
+    "prettier": "1.14.2"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
