--- a/packages/unicon/package.json
+++ b/packages/unicon/package.json
@@ -10,7 +10,9 @@
     "del": "^3.0.0",
     "exec-then": "^1.3.1",
     "figma-js": "^1.5.1",
-    "make-dir": "^1.3.0"
+    "make-dir": "^1.3.0",
+    "svgo": "^1.0.5",
+    "svgson-next": "^4.1.5"
   },
   "devDependencies": {
     "prettier": "1.14.2"
