--- a/packages/unicon-transformer-js/package.json
+++ b/packages/unicon-transformer-js/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "pascalcase": "^0.1.1",
     "svgo": "^1.0.5",
     "svgson-next": "^4.1.5"
   },
